--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,21 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
-/test/js
-/test/browsertest/js
-/test/fixtures/temp-cache-fixture
-/benchmark/js
-/benchmark/fixtures
-/examples/**/dist
+
+# testing
 /coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-*.log
-.idea
-.vscode
-package-lock.json
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
